[gd_scene load_steps=16 format=2]

[ext_resource path="res://Sprites/Hexagono.png" type="Texture" id=1]
[ext_resource path="res://Minion/MinionHeavy.gd" type="Script" id=2]
[ext_resource path="res://Boxes/Hitbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Sprites/Ataque Slash.png" type="Texture" id=4]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 4 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 4 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 4 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 4 )
region = Rect2( 32, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 4 )
region = Rect2( 64, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 4 )
region = Rect2( 0, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 4 )
region = Rect2( 32, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 4 )
region = Rect2( 64, 64, 32, 32 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=11]

[node name="MinionHeavy" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.364706, 0.109804, 0.109804, 1 )
rotation = 1.5708
texture = ExtResource( 1 )

[node name="Attack" type="Position2D" parent="."]
position = Vector2( 31.748, -0.297638 )
__meta__ = {
"_edit_group_": true
}

[node name="SwordSprite" type="AnimatedSprite" parent="Attack"]
visible = false
position = Vector2( 0, -2 )
frames = SubResource( 10 )
speed_scale = 2.0

[node name="Hitbox" parent="Attack" instance=ExtResource( 3 )]
monitorable = false
collision_mask = 8

[node name="HitboxShape2d" parent="Attack/Hitbox" index="0"]
position = Vector2( -6, 0 )
shape = SubResource( 11 )

[connection signal="animation_finished" from="Attack/SwordSprite" to="." method="_on_SwordSprite_animation_finished"]
[connection signal="area_entered" from="Attack/Hitbox" to="." method="_on_Hitbox_area_entered"]

[editable path="Attack/Hitbox"]
